recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:5: error: value avance is not a member of Unit
	gauche(90)avance(100)
                  ^FourSquare:6: error: value avance is not a member of Unit
	gauche(90)avance(100)
                  ^